# netpulse

./: .env.cloud.example  .env.example  .gitignore  Dockerfile.airflow  PHASE2_CLOUD_DEPLOYMENT.md  PRD_netpulse.md  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements-local.txt  requirements.txt
.github/workflows/: ci.yml
dags/: common.py  netpulse_acquisition.py  netpulse_alerts.py  netpulse_dbt.py  netpulse_seed_towers.py  netpulse_staging.py
dashboard/: _bootstrap.py  app.py  queries.py  viz.py
dashboard/components/: sidebar_tower.py
dashboard/pages/: .gitkeep  1_Network_Health_Map.py  2_Hotspot_Leaderboard.py  3_Province_Drilldown.py  (+2 more)
dbt/: .user.yml  dbt_project.yml  profiles.yml
generators/: generate_subscriber_sessions.py  generate_tower_telemetry.py
netpulse/: __init__.py  alerts.py  config.py  db.py  geo.py  opencellid_fetch.py  paths.py  ssm.py  storage.py  tower_seed.py
scripts/: STREAMLIT_CLOUD_VALIDATION.md  backfill_pipeline.sh  backfill_pipeline_cloud.sh  download_boundaries.py  ec2_bootstrap.sh  init_minio_buckets.py  reset_airflow_runs.sh  reset_airflow_runs.sql  seed_opencellid_local.py  seed_subscriber_master.py  ssm_port_forward.sh  validate_cloud_pipeline.sh
terraform/: README.md  ec2.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  ssm-check.json  ssm.tf  ssm_endpoints.tf  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
tests/: conftest.py
transforms/: clean_subscriber_sessions.py  clean_tower_telemetry.py
(+30 files in other folders)
