[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netpulse"
version = "0.1.0"
description = "Telco network congestion hotspot intelligence pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3]>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["netpulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires live Postgres and/or MinIO",
]
